--- a/lms/src/main/resources/application.properties
+++ b/lms/src/main/resources/application.properties
@@ -1,9 +1,1 @@
-spring.application.name=lms
-spring.datasource.url=jdbc:mysql://localhost:3306/learningManagement?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Sharmy@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.profiles.active=postgresql
