--- a/lms/Dockerfile
+++ b/lms/Dockerfile
@@ -1,13 +1,7 @@
-# ---------- Stage 1: Build ----------
-FROM maven:3.9.6-eclipse-temurin-21 AS build
+# docker file configuration
+FROM openjdk:17-jdk-slim
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
-
-# ---------- Stage 2: Run ----------
-FROM eclipse-temurin:21-jdk-alpine
-WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY target/lms-0.0.1-SNAPSHOT.jar lms.jar
+RUN mkdir -p /app/uploads
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","app.jar"]
+ENTRYPOINT ["java", "-jar", "lms.jar"]
