moving docker file

--- a/lms/src/main/resources/application-postgresql.properties
+++ b/lms/src/main/resources/application-postgresql.properties
@@ -1,10 +1,10 @@
 spring.application.name=lms
 # PostgreSQL Configuration
-# postgresql://postgresql://root:CeUbAsvnUcONyBYonhRKF8HZgB5A3wyt@dpg-d49mqov5r7bs73dv24tg-a.singapore-postgres.render.com/learningmanagement
+# postgresql://postgresql://root:JxDVmlmMQaqbCWZfNdqqkXw33o3mNXTn@dpg-d49vpsf5r7bs73e4a3vg-a.singapore-postgres.render.com/learningmanagement_e6fz
 
-spring.datasource.url=jdbc:postgresql://dpg-d49mqov5r7bs73dv24tg-a.singapore-postgres.render.com/learningmanagement
+spring.datasource.url=jdbc:postgresql://dpg-d49vpsf5r7bs73e4a3vg-a.singapore-postgres.render.com/learningmanagement_e6fz
 spring.datasource.username=root
-spring.datasource.password=CeUbAsvnUcONyBYonhRKF8HZgB5A3wyt
+spring.datasource.password=JxDVmlmMQaqbCWZfNdqqkXw33o3mNXTn
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
