--- a/lms/src/main/resources/application-postgresql.properties
+++ b/lms/src/main/resources/application-postgresql.properties
@@ -1,10 +1,10 @@
 spring.application.name=lms
 # PostgreSQL Configuration
-# postgresql://postgresql://root:JxDVmlmMQaqbCWZfNdqqkXw33o3mNXTn@dpg-d49vpsf5r7bs73e4a3vg-a.singapore-postgres.render.com/learningmanagement_e6fz
+# postgresql://postgresql://root:8eUkoB4XMFf2LPp9bZSBkuIZaMXcJ7aP@dpg-d4b9i47pm1nc73bl9a30-a.oregon-postgres.render.com/learningmanagement_z70q
 
-spring.datasource.url=jdbc:postgresql://dpg-d49vpsf5r7bs73e4a3vg-a.singapore-postgres.render.com/learningmanagement_e6fz
+spring.datasource.url=jdbc:postgresql://dpg-d4b9i47pm1nc73bl9a30-a.oregon-postgres.render.com/learningmanagement_z70q
 spring.datasource.username=root
-spring.datasource.password=JxDVmlmMQaqbCWZfNdqqkXw33o3mNXTn
+spring.datasource.password=8eUkoB4XMFf2LPp9bZSBkuIZaMXcJ7aP
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
